@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2006/09/12
+	* Updated convert_engine.sql to use TYPE instead of ENGINE to be compatible
+	  with Mysql 4 installations. [Skotlex]
 	* Moved the morph restrictions from skill_additional_effect to
 	  mob_class_change, so that SA_MONOCELL will not convert clones, emperium, or
 	  treasure boxes. [Skotlex]
