@@ -10,13 +10,13 @@ ALTER TABLE `guild_member` DROP FOREIGN KEY `guild_member_ibfk_1`, DROP FOREIGN 
 ALTER TABLE `guild_position` DROP FOREIGN KEY `guild_position_ibfk_1`;
 ALTER TABLE `guild_skill` DROP FOREIGN KEY `guild_skill_ibfk_1`;
 ALTER TABLE `guild_storage` DROP FOREIGN KEY `guild_storage_ibfk_1`;
-ALTER TABLE `sc_data` ENGINE = MYISAM;
-ALTER TABLE `login` ENGINE = MYISAM;
-ALTER TABLE `char` ENGINE = MYISAM;
-ALTER TABLE `guild` ENGINE = MYISAM;
-ALTER TABLE `guild_alliance` ENGINE = MYISAM;
-ALTER TABLE `guild_expulsion` ENGINE = MYISAM;
-ALTER TABLE `guild_member` ENGINE = MYISAM;
-ALTER TABLE `guild_position` ENGINE = MYISAM;
-ALTER TABLE `guild_skill` ENGINE = MYISAM;
-ALTER TABLE `guild_storage` ENGINE = MYISAM;
+ALTER TABLE `sc_data` TYPE = MYISAM;
+ALTER TABLE `login` TYPE = MYISAM;
+ALTER TABLE `char` TYPE = MYISAM;
+ALTER TABLE `guild` TYPE = MYISAM;
+ALTER TABLE `guild_alliance` TYPE = MYISAM;
+ALTER TABLE `guild_expulsion` TYPE = MYISAM;
+ALTER TABLE `guild_member` TYPE = MYISAM;
+ALTER TABLE `guild_position` TYPE = MYISAM;
+ALTER TABLE `guild_skill` TYPE = MYISAM;
+ALTER TABLE `guild_storage` TYPE = MYISAM;
